# HSTGNN

./: .gitignore  CHANGELOG  README.md  README_for_pytorch_timeseries.md  environment.yml  init.sh  pyproject.toml  requirements.txt  setup.py  temp.ipynb  temp.py
docs/: README.md
examples/: LaST.py  LightTS.py  README.md  bistgnn_hetero_fastconv6.py  bistgnn_hetero_han.py  bistgnn_multistep.py  bistgnn_sweep.py  bistgnn_sweep_parallel.py  bistgnn_sweep_parallel.yml  bistgnn_sweep_parallel_ILI.yml  bistgnn_sweep_parallel_metrla.yml  bistgnn_sweep_parallel_pems07.yml  bistgnn_sweep_parallel_pemsbay_12.yml  bistgnn_sweep_parallel_test.yml  bistgnn_sweep_parallel_weather1.yml  bistgnn_sweep_solar_energy.yml  bistgnnv3.py  crossformer.py  deeptime.py  dlinear.py  fastgcn4_sweep.py  film.py  gru.py  hstgnnv7_sweep_parallel_pemsbay_12.yml  mtgnn.py  nlinear.py  sweeps.py  tnmlp.py  tntcn.py  tntcn_fully_connected.py  tntcn_hetero_conv_1.py  tntcn_hetero_fastconv3.py  tntcn_hetero_fastconv4.py  tntcn_hetero_fastconv5.py  tntcn_hetero_fastconv5_adaptive.py  tntcn_hetero_ntconv.py  tntcn_hetero_stconv.py  tntcn_hetero_stconv_2.py  tntcn_hetero_tnconv.py  tntcn_no_gcn.py  (+6 more)
experiments/: mtgnn_train_single_step.py  wandb_t.py
notebooks/: 01_messsge_passing.ipynb  02_st_conv1.ipynb  03_st_conv2.ipynb  04_st_conv_st.ipynb  05_han_conv.ipynb  100_analysis_of_graph_learning_layer.ipynb  101_methodology.ipynb  102_introduction_figure copy.ipynb  dataset_visualization.ipynb  multi_data.xlsx  output.xlsx  results-Copy1.xlsx  results.xlsx  results_single.xlsx  run_time.ipynb  (+2 more)
(+346 files in other folders)
