[tool.poetry]
name = "pytorch_timeseries"
version = "0.0.0+20220627214400"
description = "Timeseries Learning Library for PyTorch"
authors = ["wayne <wwye155@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.0"
tqdm = "*"

[tool.poetry.dev-dependencies]
# for testing
pytest = "^6.0.0"
pytest-mock = "*"
pytest-cov= "*"
sniffio = "^1.2.0"

# for build docs
sphinx = "*"
pyChainedProxy = "^1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
